// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover > Snapshots > should match snapshot for basic popover 1`] = `
<div
  class="tiger-popover relative inline-block"
>
  <div
    class="tiger-popover-trigger"
  >
    <button>
      Snapshot trigger
    </button>
  </div>
  <div
    class="tiger-dropdown-menu-wrapper absolute z-50 bottom-full left-1/2 -translate-x-1/2 mb-2 hidden"
  >
    <div
      class="tiger-popover-content min-w-[200px] max-w-[400px] p-3 bg-white rounded-lg shadow-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700"
    >
      <!---->
      <div
        class="tiger-popover-text text-sm text-gray-700 dark:text-gray-300"
      />
    </div>
  </div>
</div>
`;

exports[`Popover > Snapshots > should match snapshot for different placements 1`] = `
<div
  class="tiger-popover relative inline-block"
>
  <div
    class="tiger-popover-trigger"
  >
    <button>
      Trigger
    </button>
  </div>
  <div
    class="tiger-dropdown-menu-wrapper absolute z-50 bottom-full left-1/2 -translate-x-1/2 mb-2 hidden"
  >
    <div
      class="tiger-popover-content min-w-[200px] max-w-[400px] p-3 bg-white rounded-lg shadow-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700"
    >
      <!---->
      <div
        class="tiger-popover-text text-sm text-gray-700 dark:text-gray-300"
      >
        Placement content
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover > Snapshots > should match snapshot for different placements 2`] = `
<div
  class="tiger-popover relative inline-block"
>
  <div
    class="tiger-popover-trigger"
  >
    <button>
      Trigger
    </button>
  </div>
  <div
    class="tiger-dropdown-menu-wrapper absolute z-50 top-full left-1/2 -translate-x-1/2 mt-2 hidden"
  >
    <div
      class="tiger-popover-content min-w-[200px] max-w-[400px] p-3 bg-white rounded-lg shadow-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700"
    >
      <!---->
      <div
        class="tiger-popover-text text-sm text-gray-700 dark:text-gray-300"
      >
        Placement content
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover > Snapshots > should match snapshot for different placements 3`] = `
<div
  class="tiger-popover relative inline-block"
>
  <div
    class="tiger-popover-trigger"
  >
    <button>
      Trigger
    </button>
  </div>
  <div
    class="tiger-dropdown-menu-wrapper absolute z-50 right-full top-1/2 -translate-y-1/2 mr-2 hidden"
  >
    <div
      class="tiger-popover-content min-w-[200px] max-w-[400px] p-3 bg-white rounded-lg shadow-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700"
    >
      <!---->
      <div
        class="tiger-popover-text text-sm text-gray-700 dark:text-gray-300"
      >
        Placement content
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover > Snapshots > should match snapshot for different placements 4`] = `
<div
  class="tiger-popover relative inline-block"
>
  <div
    class="tiger-popover-trigger"
  >
    <button>
      Trigger
    </button>
  </div>
  <div
    class="tiger-dropdown-menu-wrapper absolute z-50 left-full top-1/2 -translate-y-1/2 ml-2 hidden"
  >
    <div
      class="tiger-popover-content min-w-[200px] max-w-[400px] p-3 bg-white rounded-lg shadow-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700"
    >
      <!---->
      <div
        class="tiger-popover-text text-sm text-gray-700 dark:text-gray-300"
      >
        Placement content
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover > Snapshots > should match snapshot for different placements 5`] = `
<div
  class="tiger-popover relative inline-block"
>
  <div
    class="tiger-popover-trigger"
  >
    <button>
      Trigger
    </button>
  </div>
  <div
    class="tiger-dropdown-menu-wrapper absolute z-50 bottom-full left-0 mb-2 hidden"
  >
    <div
      class="tiger-popover-content min-w-[200px] max-w-[400px] p-3 bg-white rounded-lg shadow-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700"
    >
      <!---->
      <div
        class="tiger-popover-text text-sm text-gray-700 dark:text-gray-300"
      >
        Placement content
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover > Snapshots > should match snapshot for different placements 6`] = `
<div
  class="tiger-popover relative inline-block"
>
  <div
    class="tiger-popover-trigger"
  >
    <button>
      Trigger
    </button>
  </div>
  <div
    class="tiger-dropdown-menu-wrapper absolute z-50 top-full right-0 mt-2 hidden"
  >
    <div
      class="tiger-popover-content min-w-[200px] max-w-[400px] p-3 bg-white rounded-lg shadow-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700"
    >
      <!---->
      <div
        class="tiger-popover-text text-sm text-gray-700 dark:text-gray-300"
      >
        Placement content
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover > Snapshots > should match snapshot for popover with title 1`] = `
<div
  class="tiger-popover relative inline-block"
>
  <div
    class="tiger-popover-trigger"
  >
    <button>
      Trigger
    </button>
  </div>
  <div
    class="tiger-dropdown-menu-wrapper absolute z-50 bottom-full left-1/2 -translate-x-1/2 mb-2 hidden"
  >
    <div
      class="tiger-popover-content min-w-[200px] max-w-[400px] p-3 bg-white rounded-lg shadow-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700"
    >
      <!---->
      <div
        class="tiger-popover-text text-sm text-gray-700 dark:text-gray-300"
      />
    </div>
  </div>
</div>
`;
